tests/sumo/meso/junction_control/tls_coordination/good/control_tlsPenalty/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (13ms).
Loading additional-files from 'input_additional.add.xml' ... done (1ms).
Loading done.
Simulation version v1_7_0+1166-554a675755 started with time: 0.00
Simulation ended at time: 194.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 0.02s
 Real time factor: 11411.8
 UPS: 82529.411765
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 300.00
 Speed: 6.42
 Duration: 46.77
 WaitingTime: 0.00
 TimeLoss: 24.73
 DepartDelay: 38.33

